Revision history for perl distribution Convos

8.04 Not Released
 - Leaving a conversation will take you to the previous onc
   (Max 10 items in the history)
 - Fix not fetching channel mode if conversation is frozen
 - Fix not showing channel mode when conversation is loaded
 - Fix updating connection settings when changing connections

8.03 2023-10-31T08:39:00+0900
 - Bumped dependencies

8.02 2023-10-27T22:23:00+0900
 - Added YAML::XS as a dependency
 - Fix rendering embeds when toggling raw messages
 - Fix showing the actual topic and other settings when changing channel
 - Removed topic from main heading on desktop

8.01 2023-10-27T11:58:00+0900
 - Merged participant list and settings
 - Changed appearance for the main menu toggles
 - Fix not hiding the main menu when toggling the main menu sections
 - Fix not showing "0" notifications counter
 - Fix annoying animation when searching for conversations
 - Fix rendering of notifications

8.00 2023-10-26T21:30:00+0900
 - Add collapsible sidebar sections #840
   Contributor: Claudiu Ciungan
 - Add Romanian translation,
   Contributor: mostlyvirtual
 - Add support for CONVOS_LOCAL_ADDRESS
 - Build docker images to ghcr instead of docker hub
 - Fix some A11y warnings after upgrading to Svelte 4
 - Upgrade Svelte 3 to Svelte 4
 - Upgrade JavaScript dependencies

7.16 2023-10-18T13:55:00+0900
  - Test release to see if docker images was built correctly

7.15 2023-01-11T12:50:00+0900
 - Fix invalid assets names

7.14 2023-01-11T12:37:00+0900
 - Fix throwing LDAP error on invalid email or password
 - Fix not prefixing contact info with "mailto:" #813
 - Add support for URLs in contact info #813
 - Changed to using Makefile.PL instead of cpanfile #810
 - Changed to system emojis after twemoji.maxcdn.com was shut down #818
 - Changed "convos install --prod" to "convos install --core"
 - Bumped dependencies

7.13 2022-11-07T23:12:00+0900
 - Fix bug in the build process

7.12 2022-11-07T12:44:00+0900